fix ie edge jumping

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .box {
-    position: absolute;
+    position: fixed;
     margin-top: 100px;
     top: 0px;
     left: 50%;
